# shiplabel-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: configuration.md
docs/carriers/: README.md  dhl.md  dpd.md  gls.md  sendcloud.md  ups.md
examples/: claude_desktop_config.json  dhl_sandbox_request.json  sendcloud_request.json
src/shiplabel/: README.md  __init__.py  auth.py  canonical.py  cli.py  config.py  describe.py  engine.py  errors.py  loader.py  mapper.py  service.py  spec.py
src/shiplabel/carriers/: dhl.json  dhl_return.json  dpd.json  fedex.json  gls.json  sendcloud.json  shipcloud.json  ups.json
src/shiplabel/tests/: test_carriers.py  test_dhl.py  test_env_credentials.py
src/shiplabel_mcp/: __init__.py  __main__.py  server.py
